--- a/style/style.css
+++ b/style/style.css
@@ -135,6 +135,9 @@ main{
   max-width: 1140px;
   margin: 65px auto;
 }
+main section{
+  margin-top: 120px;
+}
 /* about style */
 
 .about{
@@ -160,3 +163,29 @@ main{
   font-weight: 600;
 }
 
+.skill-section{
+  
+}
+.skill-container{
+  margin: 40px;
+  display: flex;
+  gap: 24px;
+}
+.skill{
+  padding: 30px;
+  border-radius: 8px;
+
+  box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+  background: rgb(255, 255, 255);
+  color: rgb(117, 117, 117);
+  font-family: Open Sans;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 28px;
+  letter-spacing: 0%;
+  text-align: left;
+}
+
+.section-description{
+  padding: 20px;
+}
